// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ init/ basic/: dir1 1`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ init/ basic/: dir2 1`] = `
Array [
  "bar.ch1.md",
  "bar.md",
  "bar.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;
